--- a/client/src/components/pages/profile-edit-page.css
+++ b/client/src/components/pages/profile-edit-page.css
@@ -1,18 +1,19 @@
 .edit-page-row {
-    width: 100%;
-    margin-top: 15px;
-    margin-bottom: 10px;
+  width: 100%;
+  margin-top: 15px;
+  margin-bottom: 10px;
 }
 
 .edit-page-row input {
-    padding: 5px;
+  padding: 5px;
 }
 
 .edit-profile-menu-container h1 {
-    margin-top: 30px;
-    margin-bottom: 25px;
+  margin-top: 30px;
+  margin-bottom: 25px;
 }
 
-.edit-about-input input, .edit-roomates-preferences-input input {
-    height: 100px;
+.edit-about-input input,
+.edit-roomates-preferences-input input {
+  height: 100px;
 }
