--- a/client/src/components/post-photos/post-photos.css
+++ b/client/src/components/post-photos/post-photos.css
@@ -1,47 +1,48 @@
 .photos {
-    margin-top: 60px;
-    text-align: center;
+  margin-top: 60px;
+  text-align: center;
 }
 
 .slider {
-    margin-top: 5%;
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5%;
+  margin-top: 5%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
 }
 
 .image {
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    max-width: 850px;
-    max-height: 550px;
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  max-width: 850px;
+  max-height: 550px;
 }
 
-.left-arrow, .right-arrow {
-    font-size: 5vh;
-    z-index: 10;
-    cursor: pointer;
-    user-select: none;
-    color: #000;
+.left-arrow,
+.right-arrow {
+  font-size: 5vh;
+  z-index: 10;
+  cursor: pointer;
+  user-select: none;
+  color: #000;
 }
 
 .left-arrow {
-    margin-right: 2%;
+  margin-right: 2%;
 }
 
 .right-arrow {
-    margin-left: 2%;
+  margin-left: 2%;
 }
 
 .slide {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .slide span {
-    margin-top: 10px;
-    font-size: 18px;
+  margin-top: 10px;
+  font-size: 18px;
 }
