--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,128 +1,127 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
-    outline: none;
-    border: none;
-    text-decoration: none;
-    list-style: none;
-    color: black;
-    font-weight: normal;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+  outline: none;
+  border: none;
+  text-decoration: none;
+  list-style: none;
+  color: black;
+  font-weight: normal;
 }
 
 body {
-    font-size: 14px;
-    margin-bottom: 1rem;
-    font-family: Roboto, 'sans-serif';
+  font-size: 14px;
+  margin-bottom: 1rem;
+  font-family: Roboto, 'sans-serif';
 }
 
 a {
-    color: white;
-    text-decoration: none !important;
+  color: white;
+  text-decoration: none !important;
 }
 
 a:hover {
-    color:  #ffe6e6;
-    text-decoration: none;
+  color: #ffe6e6;
+  text-decoration: none;
 }
 
 .footer {
-    background-color: #ffb3b3;
-    padding-left: 150px;
-    padding-right: 150px;
-    color: white !important;
+  background-color: #ffb3b3;
+  padding-left: 150px;
+  padding-right: 150px;
+  color: white !important;
 }
-
 
 .col-footer {
-    width: 33%;
+  width: 33%;
 }
-
 
 .main-app-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-ul, ol {
-    margin: 0;
-    padding: 0;
+ul,
+ol {
+  margin: 0;
+  padding: 0;
 }
 
-input[type=text],
-input[type=number],
-input[type=tel],
+input[type='text'],
+input[type='number'],
+input[type='tel'],
 select {
-    border: 1px solid grey;
-    border-radius: 5px;
-    padding: 5px 10px;
-    width: 100%;
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 5px 10px;
+  width: 100%;
 }
 
 select {
-    padding: 5px 5px;
+  padding: 5px 5px;
 }
 
-input[type=radio] {
-    margin-right: 5px;
+input[type='radio'] {
+  margin-right: 5px;
 }
 
 label {
-    margin: 0;
+  margin: 0;
 }
 
 input:focus {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 textarea {
-    border: 1px solid grey;
-    border-radius: 5px;
-    padding: 5px 10px;
-    width: 100%;
-    height: 100px;
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 5px 10px;
+  width: 100%;
+  height: 100px;
 }
 
 .nav-link {
-    color: white;
+  color: white;
 }
 
 .nav-link:hover {
-    color:  #ffe6e6;
+  color: #ffe6e6;
 }
 
 .footer h5 {
-    color: white;
+  color: white;
 }
 
 textarea:focus {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 button.button {
-    border-radius: 5px;
-    padding: 7px 20px;
+  border-radius: 5px;
+  padding: 7px 20px;
 }
 
 button.button.action {
-    background-color: #83B692;
-    transition: .3s background-color ease;
+  background-color: #83b692;
+  transition: 0.3s background-color ease;
 }
 
 button.button.action:hover {
-    background-color: #799c83;
+  background-color: #799c83;
 }
 
 button.button.action:active {
-    background-color: #649171;
+  background-color: #649171;
 }
 
 .greet-container {
-    width: 100%;
-    height: 32vw;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 32vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
