--- a/client/src/components/header/header.scss
+++ b/client/src/components/header/header.scss
@@ -1,8 +1,17 @@
 .header {
-  height: 60px;
-  background-color: #ffb3b3;
   display: flex;
   align-items: center;
+  height: 60px;
+  background-color: #ffb3b3;
+  box-shadow: 0 2px 10px rgba(128, 88, 88, 0.8);
+
+  a {
+    color: white;
+
+    &:hover {
+      color: lighten(#ffb3b3, 10%);
+    }
+  }
 }
 
 .header-wrapper {
@@ -13,6 +22,7 @@
 
 .header-brand {
   font-size: 2rem;
+  margin-bottom: 0;
 }
 
 .header-brand a {
@@ -21,12 +31,5 @@
 
 .nav-list {
   display: flex;
-}
-
-.nav-item {
-  margin-right: 15px;
-}
-
-.nav-item:last-child {
-  margin-right: 0;
+  gap: 15px;
 }
