--- a/client/src/components/pages/profile-page/profile-page.scss
+++ b/client/src/components/pages/profile-page/profile-page.scss
@@ -62,7 +62,7 @@
   .detail-info {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, minmax(100px, auto));
+    grid-template-rows: repeat(2, minmax(30px, auto));
 
     &__item:nth-child(1) {
       grid-column: 1 / 3;
@@ -73,6 +73,16 @@
         font-size: 20px;
       }
     }
+  }
+
+  .recent-posts {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 767px) {
+  .detail-info {
+    margin-top: 20px;
   }
 }
 
