--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -13,17 +13,16 @@
 
 body {
   font-size: 14px;
-  margin-bottom: 1rem;
   font-family: Roboto, 'sans-serif';
 }
 
 a {
-  color: white;
-  text-decoration: none !important;
+  color: black;
+  text-decoration: none;
 }
 
 a:hover {
-  color: #ffe6e6;
+  color: black;
   text-decoration: none;
 }
 
