Add profile edit page

--- a/client/src/components/pages/profile-page/profile-page.scss
+++ b/client/src/components/pages/profile-page/profile-page.scss
@@ -1,35 +1,5 @@
-.profile-page-short-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 30%;
-  padding: 4vh;
-  margin-right: auto;
-}
-
-.profile-page-short-info img {
-  width: 100%;
-  height: 100%;
-  max-width: 200px;
-  max-height: 200px;
-}
-
-.profile-page-username {
-  margin-top: 10px;
-}
-
-.profile-page-about,
-.profile-page-rating {
-  margin-top: 7px;
-}
-
-.profile-page-rating {
-  margin-bottom: 15px;
-}
-
 .profile-wrapper {
-  margin-top: 60px;
+  margin: 60px 0;
 
   .short-info {
     display: flex;
@@ -52,10 +22,6 @@
 
     .user-name {
       font-size: 18px;
-
-      span {
-        font-size: 0.8rem;
-      }
     }
   }
 
@@ -83,179 +49,5 @@
 @media (max-width: 767px) {
   .detail-info {
     margin-top: 20px;
-  }
-}
-
-.profile-row-container {
-  margin: 0 !important;
-}
-
-.profile-page-short-info,
-.profile-page-full-info,
-.profile-page-interests,
-.profile-page-social-info,
-.profile-page-liked-posts,
-.profile-page-friend-list {
-  background-color: #eee;
-  border-radius: 15px;
-}
-
-.profile-page-full-info {
-  width: 68%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.profile-page-interests {
-  width: 64%;
-  margin-top: 25px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  flex-direction: column;
-}
-
-.profile-page-interests-div {
-  margin-top: 40px;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.profile-page-interest-tag {
-  margin-left: 5%;
-  margin-right: 5%;
-  width: 165px;
-  height: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #87ceeb;
-  border-radius: 15px;
-}
-
-.profile-page-profile-right-container {
-  margin-left: 20px !important;
-}
-
-.profile-page-social-info {
-  margin-right: auto;
-  padding: 3vh;
-  width: 33%;
-  margin-top: 20px !important;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  text-align: center;
-}
-
-.profile-page-social-info h2 {
-  margin-bottom: 15px;
-}
-
-.profile-page-full-info-description {
-  width: 100%;
-}
-
-.profile-page-full-info-row {
-  padding: 10px 0;
-  border-bottom: 0.5px solid darkgrey;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  margin-left: 20px !important;
-  margin-right: 20px !important;
-}
-
-.profile-page-full-info-row h3,
-.social-row h3 {
-  font-size: 18px;
-}
-
-.profile-page-social-row {
-  padding: 10px 0;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  border-bottom: 0.5px solid darkgrey;
-  justify-content: space-between;
-  margin-left: 20px !important;
-  margin-right: 20px !important;
-}
-
-.profile-page-liked-posts {
-  width: 65%;
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-}
-
-.profile-page-liked-posts-container {
-  margin-top: 30px;
-}
-
-.profile-page-post {
-  border-bottom: 1px solid darkgrey;
-  margin-left: 20px !important;
-  margin-right: 20px !important;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding: 2vh 0;
-}
-
-.profile-page-friend-list {
-  width: 33%;
-  margin-top: 30px;
-  margin-right: auto;
-}
-
-.profile-page-friend-list-menu {
-  padding-top: 30px !important;
-  margin-left: 40px !important;
-  margin-right: 40px !important;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.profile-page-friend-list-container {
-  margin-top: 20px;
-}
-
-.profile-page-friend {
-  margin-bottom: 10px;
-  margin-left: 30px !important;
-  margin-right: 30px !important;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.profile-page-friend a img {
-  width: 80px;
-  height: 80px;
-}
-
-.text-secondary {
-  font-size: 18px;
-}
-
-@media only screen and (max-width: 1210px) {
-  .profile-page-short-info,
-  .profile-page-friend-list,
-  .profile-page-liked-posts,
-  .profile-page-social-info,
-  .profile-page-interests,
-  .profile-page-full-info {
-    width: 100%;
-    margin-top: 25px;
   }
 }
