--- a/client/src/components/pages/profile-edit-page/profile-edit-page.scss
+++ b/client/src/components/pages/profile-edit-page/profile-edit-page.scss
@@ -1,19 +1,11 @@
-.edit-page-row {
-  width: 100%;
-  margin-top: 15px;
-  margin-bottom: 10px;
-}
+.edit-profile-wrapper {
+  margin: 60px 0;
 
-.edit-page-row input {
-  padding: 5px;
-}
+  .input-wrapper {
+    margin-top: 10px;
+  }
 
-.edit-profile-menu-container h1 {
-  margin-top: 30px;
-  margin-bottom: 25px;
-}
-
-.edit-about-input input,
-.edit-roomates-preferences-input input {
-  height: 100px;
+  .btn-submit {
+    margin-top: 10px;
+  }
 }
