Improve profile edit page

--- a/client/src/components/pages/profile-edit-page/profile-edit-page.scss
+++ b/client/src/components/pages/profile-edit-page/profile-edit-page.scss
@@ -5,6 +5,11 @@
     margin-top: 10px;
   }
 
+  #avatar,
+  #dateOfBirth {
+    margin-left: 5px;
+  }
+
   .btn-submit {
     margin-top: 10px;
   }
