Fix heading styles

--- a/client/src/components/pages/post-page/post-page.scss
+++ b/client/src/components/pages/post-page/post-page.scss
@@ -1,36 +1,22 @@
-h2 {
+.post-wrapper {
+  h2 {
     font-size: 30px;
-    text-align: center;
-    margin-top: 2rem;
+    // text-align: center;
+    margin: 2rem 0 32px;
     position: relative;
   }
 
-.title {
+  .title {
     margin-top: 0;
     font-size: 20px;
     font-weight: bold;
-    
   }
-
-.post-box{
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  overflow: auto;
-  border:1px solid gray;
-  height: 32vw;
-
 }
 
-.left-side-pics {
-    float:left;
+// .left-side-pics {
+//   float: left;
+// }
 
-}
-
-.right-side-text {
-    float:right;
-    
-}
-
-
+// .right-side-text {
+//   float: right;
+// }
