--- a/client/src/components/pages/login-page/login-page.scss
+++ b/client/src/components/pages/login-page/login-page.scss
@@ -1,15 +1,14 @@
-.container-login-page {
+.login-wrapper {
+  margin: 60px auto;
+  padding: 30px;
   text-align: center;
-  padding-top: 70px;
-  width: 60%;
+  width: 400px;
   background-color: #ffb3b3;
   border-radius: 6px;
   border: 1px solid black;
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin: 100px auto 70px;
-  padding-bottom: 100px;
 }
 
 .login-inputs {
@@ -18,16 +17,21 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-}
 
-.login-inputs input {
-  width: 80%;
-  padding: 25px;
-  margin-top: 40px;
-  border: 1px solid darkgrey;
-  border-radius: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
+  form {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 20px;
+  }
+
+  input {
+    padding: 10px 20px;
+    border: 1px solid darkgrey;
+    border-radius: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
 
 .login-inputs a {
